# vllm-semantic-cache-ext

./: pyproject.toml  scratch_diagnose_store_pattern.py
.claude/docs/: literature-review-minmax-mean-methods.md  step-0.3-results.md  step-0.3-svd-salvage-analysis.md  step-0.4-adversarial-results.md  step-1.5-partial-splice-plan.md
benchmarks/: run_grid_sweep.py  run_latency_suite.py
experiments/: step_0_3_cost.csv  step_0_3_lru_arc_recall.py  step_0_3_lru_arc_results.csv  step_0_3_minmax_cost.csv  step_0_3_minmax_recall.py  step_0_3_minmax_results.csv  step_0_3_oracle_and_mean_recall.py  step_0_3_oracle_mean_results.csv  step_0_3_results.csv  step_0_3_svd_recall.py  step_0_4_adversarial_needle_recall.py  step_0_4_adversarial_results.csv  step_1_4_attention_seeding_recall.py  step_1_4_attention_seeding_results.csv  step_1_4_chain_aware_multiturn.py  step_1_4_chain_aware_results.csv  step_1_4_keynorm_recall.py  step_1_4_keynorm_results.csv  step_1_4_session_aware_concurrent_results.csv  step_1_4_session_aware_concurrent_stress.py  step_1_4_session_aware_recall.py  step_1_4_session_aware_results.csv
harness/: adaptive_splice_probe.py  metrics.py  needle_workload.py  policies.py  run_adaptive_probe_live.py  server.py  workloads.py
semantic_offload/: _debug.py  _vllm_compat.py  connector.py  index.py  manager.py  policy.py  query_capture.py  spec.py  worker.py
tests/: test_harness.py  test_query_capture.py  test_step_1_1_smoke.py  test_step_1_2_summaries.py  test_step_1_3_scoring.py  test_step_1_4_eviction.py  test_step_1_5_prefetch.py
