[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-offload"
version = "0.1.0"
description = "Query-aware semantic eviction/prefetch policy for vLLM's KV-cache CPU offloading"
requires-python = ">=3.10"
dependencies = ["torch"]

[tool.setuptools.packages.find]
include = ["semantic_offload*"]
